crates/action/tests/probes/derive_credential_on_wrong_type.stderr
error: field with `#[credential]` must have type `CredentialGuard<T>` (optionally wrapped in `Option<...>` and/or `Lazy<...>`) — got: u32
  --> tests/probes/derive_credential_on_wrong_type.rs:13:18
   |
13 |     not_a_guard: u32,
   |                  ^^^
